# ctf-workspace

./: .gitignore  Makefile  README.md  challenges.csv  challenges.py  pixi.toml  pyproject.toml  setup.py  setup.sh  shell.nix
Crypto/: pixi.toml
ctf/: all.py  crypto.py  ext.py  misc.py  pipe.py  std.py  web.py
ctf/crypto/: factor.py  math.py  rsa_utils.py
ctf_lib/: __init__.py
ctf_lib/crypto/: math.py  matrix.py  rsa_utils.py
ctf_lib/tests/: test_crypto.py
